--- a/cover/templates/cover/index.html
+++ b/cover/templates/cover/index.html
@@ -1,5 +1,14 @@
 {% extends "cover/layout.html" %}
 
 {% block content %}
-    cover/index.html
+cover/index.html
+<form action="" method="post">
+    {% csrf_token %}
+    <table>
+        {{ form }}
+    </table>
+    <input type="submit" value="Generator O RLY">
+</form>
+ 
+<img src="/cover/image.jpg">
 {% endblock %}
