PIL로 이미지에 글자 그림 그리기

--- a/cover/templates/cover/index.html
+++ b/cover/templates/cover/index.html
@@ -9,6 +9,9 @@ cover/index.html
     </table>
     <input type="submit" value="Generator O RLY">
 </form>
- 
-<img src="/cover/image.jpg">
+
+{% if form.get_params %}
+<img src="{% url "cover:image_generator" %}?{{ form.get_params }}" />
+{% endif %}
+
 {% endblock %}
