--- a/cover/templates/cover/index.html
+++ b/cover/templates/cover/index.html
@@ -1,17 +1,22 @@
 {% extends "cover/layout.html" %}
+{% load bootstrap3 %}
 
 {% block content %}
-cover/index.html
-<form action="" method="post">
-    {% csrf_token %}
-    <table>
-        {{ form }}
-    </table>
-    <input type="submit" value="Generator O RLY">
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <form action="" method="post">
+                {% csrf_token %}
+                {% bootstrap_form form %}
+                <input type="submit" value="Generator O RLY" class="btn btn-primary">
+            </form>
 
-{% if form.get_params %}
-<img src="{% url "cover:image_generator" %}?{{ form.get_params }}" />
-{% endif %}
-
+            <div class="col-sm-6">
+                {% if form.get_params %}
+                <img src="{% url "cover:image_generator" %}?{{ form.get_params }}" />
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
